Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...a975152](https://github.com/cri-o/cri-o/compare/v1.22.0...a97515269235404afae754c65bad272c92508731) on Sat, 22 Jan 2022 05:51:17 UTC.
+[v1.22.0...867aeea](https://github.com/cri-o/cri-o/compare/v1.22.0...867aeea2d6a10c7f698ca006596f2efae799a9a2) on Tue, 25 Jan 2022 00:14:02 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a97515269235404afae754c65bad272c92508731.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a97515269235404afae754c65bad272c92508731.tar.gz)
-- [cri-o.arm64.a97515269235404afae754c65bad272c92508731.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a97515269235404afae754c65bad272c92508731.tar.gz)
+- [cri-o.amd64.867aeea2d6a10c7f698ca006596f2efae799a9a2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.867aeea2d6a10c7f698ca006596f2efae799a9a2.tar.gz)
+- [cri-o.arm64.867aeea2d6a10c7f698ca006596f2efae799a9a2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.867aeea2d6a10c7f698ca006596f2efae799a9a2.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -44,14 +41,18 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
- - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5561](https://github.com/cri-o/cri-o/pull/5561), [@haircommander](https://github.com/haircommander))
+ - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add a [crio.stats] table to the config for configuring all things stats-related.
   Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Add support for TARGET namespace mode, which enables support for ephemeral containers. ([#5440](https://github.com/cri-o/cri-o/pull/5440), [@haircommander](https://github.com/haircommander))
@@ -80,6 +81,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
@@ -90,10 +92,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
- - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
- - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5550](https://github.com/cri-o/cri-o/pull/5550), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
@@ -159,6 +160,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/onsi/ginkgo: [v1.16.4 → v1.16.5](https://github.com/onsi/ginkgo/compare/v1.16.4...v1.16.5)
 - github.com/onsi/gomega: [v1.16.0 → v1.17.0](https://github.com/onsi/gomega/compare/v1.16.0...v1.17.0)
 - github.com/opencontainers/image-spec: [083f635 → 5ad6f50](https://github.com/opencontainers/image-spec/compare/083f635...5ad6f50)
+- github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
 - github.com/opencontainers/selinux: [v1.8.4 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.4...v1.9.1)
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
 - github.com/prometheus/procfs: [v0.6.0 → v0.7.3](https://github.com/prometheus/procfs/compare/v0.6.0...v0.7.3)
@@ -183,7 +185,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/text: v0.3.6 → v0.3.7
 - golang.org/x/tools: v0.1.2 → d4cc65f
 - google.golang.org/api: v0.44.0 → v0.46.0
-- google.golang.org/grpc: v1.40.0 → v1.42.0
+- google.golang.org/grpc: v1.40.0 → v1.43.0
 - google.golang.org/protobuf: v1.26.0 → v1.27.1
 - k8s.io/gengo: b6c5ce2 → 485abfe
 - k8s.io/klog/v2: v2.10.0 → v2.30.0
