Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...a9c23ff](https://github.com/cri-o/cri-o/compare/v1.22.0...a9c23ffdb6a01ac1fc02cc1a503767c3c44030dd) on Tue, 25 Jan 2022 17:48:42 UTC.
+[v1.22.0...025bebf](https://github.com/cri-o/cri-o/compare/v1.22.0...025bebfad2aea8b8849bd560e9ef3f4326a3ef5d) on Wed, 26 Jan 2022 10:13:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a9c23ffdb6a01ac1fc02cc1a503767c3c44030dd.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a9c23ffdb6a01ac1fc02cc1a503767c3c44030dd.tar.gz)
-- [cri-o.arm64.a9c23ffdb6a01ac1fc02cc1a503767c3c44030dd.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a9c23ffdb6a01ac1fc02cc1a503767c3c44030dd.tar.gz)
+- [cri-o.amd64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz)
+- [cri-o.arm64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -43,6 +40,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -103,6 +103,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/antlr/antlr4/runtime/Go/antlr: [b48c857](https://github.com/antlr/antlr4/runtime/Go/antlr/tree/b48c857)
 - github.com/dtylman/scp: [f3000a3](https://github.com/dtylman/scp/tree/f3000a3)
 - github.com/getkin/kin-openapi: [v0.76.0](https://github.com/getkin/kin-openapi/tree/v0.76.0)
+- github.com/go-logr/stdr: [v1.2.0](https://github.com/go-logr/stdr/tree/v1.2.0)
 - github.com/go-logr/zapr: [v1.2.0](https://github.com/go-logr/zapr/tree/v1.2.0)
 - github.com/google/cel-go: [v0.9.0](https://github.com/google/cel-go/tree/v0.9.0)
 - github.com/google/cel-spec: [v0.6.0](https://github.com/google/cel-spec/tree/v0.6.0)
@@ -144,7 +145,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/evanphx/json-patch: [v4.11.0+incompatible → v4.12.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.11.0...v4.12.0)
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.3 → v1.7.4](https://github.com/fsouza/go-dockerclient/compare/v1.7.3...v1.7.4)
-- github.com/go-logr/logr: [v0.4.0 → v1.2.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.0)
+- github.com/go-logr/logr: [v0.4.0 → v1.2.1](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.1)
 - github.com/godbus/dbus/v5: [v5.0.4 → v5.0.6](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.6)
 - github.com/golang/glog: [23def4e → v1.0.0](https://github.com/golang/glog/compare/23def4e...v1.0.0)
 - github.com/google/cadvisor: [v0.39.2 → v0.43.0](https://github.com/google/cadvisor/compare/v0.39.2...v0.43.0)
@@ -172,10 +173,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vishvananda/netlink: [d40f988 → e1a867c](https://github.com/vishvananda/netlink/compare/d40f988...e1a867c)
 - github.com/vishvananda/netns: [db3c7e5 → 2eb08e3](https://github.com/vishvananda/netns/compare/db3c7e5...2eb08e3)
 - github.com/yuin/goldmark: [v1.3.5 → v1.4.0](https://github.com/yuin/goldmark/compare/v1.3.5...v1.4.0)
-- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.26.1
+- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.28.0
 - go.opentelemetry.io/otel/sdk: v0.20.0 → v1.2.0
-- go.opentelemetry.io/otel/trace: v0.20.0 → v1.2.0
-- go.opentelemetry.io/otel: v0.20.0 → v1.2.0
+- go.opentelemetry.io/otel/trace: v0.20.0 → v1.3.0
+- go.opentelemetry.io/otel: v0.20.0 → v1.3.0
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.10.0
 - go.uber.org/zap: v1.17.0 → v1.19.0
 - golang.org/x/crypto: 0c34fe9 → 32db794
