Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...025bebf](https://github.com/cri-o/cri-o/compare/v1.22.0...025bebfad2aea8b8849bd560e9ef3f4326a3ef5d) on Wed, 26 Jan 2022 10:23:03 UTC.
+[v1.22.0...13052a3](https://github.com/cri-o/cri-o/compare/v1.22.0...13052a38b9b62812ee2648ea82c11b413a0219df) on Wed, 26 Jan 2022 15:11:32 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz)
-- [cri-o.arm64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.025bebfad2aea8b8849bd560e9ef3f4326a3ef5d.tar.gz)
+- [cri-o.amd64.13052a38b9b62812ee2648ea82c11b413a0219df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.13052a38b9b62812ee2648ea82c11b413a0219df.tar.gz)
+- [cri-o.arm64.13052a38b9b62812ee2648ea82c11b413a0219df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.13052a38b9b62812ee2648ea82c11b413a0219df.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -82,6 +82,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
+ - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
