Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...b15fee5](https://github.com/cri-o/cri-o/compare/v1.22.0...b15fee5bb0f73bfb7e003cc141c9ce63f7c473b6) on Mon, 31 Jan 2022 17:53:54 UTC.
+[v1.22.0...62cf7fb](https://github.com/cri-o/cri-o/compare/v1.22.0...62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc) on Mon, 31 Jan 2022 23:57:40 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b15fee5bb0f73bfb7e003cc141c9ce63f7c473b6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b15fee5bb0f73bfb7e003cc141c9ce63f7c473b6.tar.gz)
-- [cri-o.arm64.b15fee5bb0f73bfb7e003cc141c9ce63f7c473b6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b15fee5bb0f73bfb7e003cc141c9ce63f7c473b6.tar.gz)
+- [cri-o.amd64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz)
+- [cri-o.arm64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -44,14 +41,18 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
- - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5561](https://github.com/cri-o/cri-o/pull/5561), [@haircommander](https://github.com/haircommander))
+ - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add a [crio.stats] table to the config for configuring all things stats-related.
   Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Add support for TARGET namespace mode, which enables support for ephemeral containers. ([#5440](https://github.com/cri-o/cri-o/pull/5440), [@haircommander](https://github.com/haircommander))
@@ -79,7 +80,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5284](https://github.com/cri-o/cri-o/pull/5284), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
+ - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
+ - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
@@ -90,13 +94,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
- - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
- - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5580](https://github.com/cri-o/cri-o/pull/5580), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5550](https://github.com/cri-o/cri-o/pull/5550), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Fix crypto-profile bind within RHEL based containers. ([#5575](https://github.com/cri-o/cri-o/pull/5575), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
+ - Update go to 1.17 in go.mod ([#5577](https://github.com/cri-o/cri-o/pull/5577), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
 
@@ -104,6 +106,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/antlr/antlr4/runtime/Go/antlr: [b48c857](https://github.com/antlr/antlr4/runtime/Go/antlr/tree/b48c857)
 - github.com/dtylman/scp: [f3000a3](https://github.com/dtylman/scp/tree/f3000a3)
 - github.com/getkin/kin-openapi: [v0.76.0](https://github.com/getkin/kin-openapi/tree/v0.76.0)
+- github.com/go-logr/stdr: [v1.2.0](https://github.com/go-logr/stdr/tree/v1.2.0)
 - github.com/go-logr/zapr: [v1.2.0](https://github.com/go-logr/zapr/tree/v1.2.0)
 - github.com/google/cel-go: [v0.9.0](https://github.com/google/cel-go/tree/v0.9.0)
 - github.com/google/cel-spec: [v0.6.0](https://github.com/google/cel-spec/tree/v0.6.0)
@@ -145,7 +148,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/evanphx/json-patch: [v4.11.0+incompatible → v4.12.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.11.0...v4.12.0)
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.3 → v1.7.4](https://github.com/fsouza/go-dockerclient/compare/v1.7.3...v1.7.4)
-- github.com/go-logr/logr: [v0.4.0 → v1.2.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.0)
+- github.com/go-logr/logr: [v0.4.0 → v1.2.1](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.1)
 - github.com/godbus/dbus/v5: [v5.0.4 → v5.0.6](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.6)
 - github.com/golang/glog: [23def4e → v1.0.0](https://github.com/golang/glog/compare/23def4e...v1.0.0)
 - github.com/google/cadvisor: [v0.39.2 → v0.43.0](https://github.com/google/cadvisor/compare/v0.39.2...v0.43.0)
@@ -161,6 +164,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/onsi/ginkgo: [v1.16.4 → v1.16.5](https://github.com/onsi/ginkgo/compare/v1.16.4...v1.16.5)
 - github.com/onsi/gomega: [v1.16.0 → v1.17.0](https://github.com/onsi/gomega/compare/v1.16.0...v1.17.0)
 - github.com/opencontainers/image-spec: [083f635 → 5ad6f50](https://github.com/opencontainers/image-spec/compare/083f635...5ad6f50)
+- github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
 - github.com/opencontainers/selinux: [v1.8.4 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.4...v1.9.1)
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
 - github.com/prometheus/procfs: [v0.6.0 → v0.7.3](https://github.com/prometheus/procfs/compare/v0.6.0...v0.7.3)
@@ -172,10 +176,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vishvananda/netlink: [d40f988 → e1a867c](https://github.com/vishvananda/netlink/compare/d40f988...e1a867c)
 - github.com/vishvananda/netns: [db3c7e5 → 2eb08e3](https://github.com/vishvananda/netns/compare/db3c7e5...2eb08e3)
 - github.com/yuin/goldmark: [v1.3.5 → v1.4.0](https://github.com/yuin/goldmark/compare/v1.3.5...v1.4.0)
-- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.26.1
+- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.28.0
 - go.opentelemetry.io/otel/sdk: v0.20.0 → v1.2.0
-- go.opentelemetry.io/otel/trace: v0.20.0 → v1.2.0
-- go.opentelemetry.io/otel: v0.20.0 → v1.2.0
+- go.opentelemetry.io/otel/trace: v0.20.0 → v1.3.0
+- go.opentelemetry.io/otel: v0.20.0 → v1.3.0
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.10.0
 - go.uber.org/zap: v1.17.0 → v1.19.0
 - golang.org/x/crypto: 0c34fe9 → 32db794
@@ -185,7 +189,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/text: v0.3.6 → v0.3.7
 - golang.org/x/tools: v0.1.2 → d4cc65f
 - google.golang.org/api: v0.44.0 → v0.46.0
-- google.golang.org/grpc: v1.40.0 → v1.42.0
+- google.golang.org/grpc: v1.40.0 → v1.43.0
 - google.golang.org/protobuf: v1.26.0 → v1.27.1
 - k8s.io/gengo: b6c5ce2 → 485abfe
 - k8s.io/klog/v2: v2.10.0 → v2.30.0
