Update release notes

--- a/v1.21.4.md
+++ b/v1.21.4.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.4
 
 The release notes have been generated for the commit range
-[v1.21.3...aebb17b](https://github.com/cri-o/cri-o/compare/v1.21.3...aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f) on Fri, 21 Jan 2022 20:32:58 UTC.
+[v1.21.3...c058478](https://github.com/cri-o/cri-o/compare/v1.21.3...c05847896bc721f6529b1ceb4bafaf6cfe523b5d) on Wed, 02 Feb 2022 17:12:26 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz)
-- [cri-o.arm64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz)
+- [cri-o.amd64.c05847896bc721f6529b1ceb4bafaf6cfe523b5d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c05847896bc721f6529b1ceb4bafaf6cfe523b5d.tar.gz)
+- [cri-o.arm64.c05847896bc721f6529b1ceb4bafaf6cfe523b5d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c05847896bc721f6529b1ceb4bafaf6cfe523b5d.tar.gz)
 
 ## Changelog since v1.21.3
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5297](https://github.com/cri-o/cri-o/pull/5297), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5407](https://github.com/cri-o/cri-o/pull/5407), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5389](https://github.com/cri-o/cri-o/pull/5389), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a case where conmon children are sometimes leaked ([#5510](https://github.com/cri-o/cri-o/pull/5510), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5266](https://github.com/cri-o/cri-o/pull/5266), [@saschagrunert](https://github.com/saschagrunert))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5436](https://github.com/cri-o/cri-o/pull/5436), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5502](https://github.com/cri-o/cri-o/pull/5502), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
