--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...62cf7fb](https://github.com/cri-o/cri-o/compare/v1.22.0...62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc) on Tue, 01 Feb 2022 00:01:34 UTC.
+[v1.22.0...127349e](https://github.com/cri-o/cri-o/compare/v1.22.0...127349e494d5272ccc0abab76c75b256b60179d1) on Wed, 02 Feb 2022 18:10:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz)
-- [cri-o.arm64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.62cf7fbcee4a19b8ea59d8e4fdf0803fc15a3cdc.tar.gz)
+- [cri-o.amd64.127349e494d5272ccc0abab76c75b256b60179d1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.127349e494d5272ccc0abab76c75b256b60179d1.tar.gz)
+- [cri-o.arm64.127349e494d5272ccc0abab76c75b256b60179d1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.127349e494d5272ccc0abab76c75b256b60179d1.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -86,6 +86,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5423](https://github.com/cri-o/cri-o/pull/5423), [@QiWang19](https://github.com/QiWang19))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5336](https://github.com/cri-o/cri-o/pull/5336), [@haircommander](https://github.com/haircommander))
