--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...293de81](https://github.com/cri-o/cri-o/compare/v1.22.0...293de815e32d6cdadc368efde45b49fe384003b4) on Thu, 03 Feb 2022 11:44:32 UTC.
+[v1.22.0...0787b7e](https://github.com/cri-o/cri-o/compare/v1.22.0...0787b7e25f72967e541bc0aa6eb01a805aee8858) on Thu, 03 Feb 2022 16:40:49 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.293de815e32d6cdadc368efde45b49fe384003b4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.293de815e32d6cdadc368efde45b49fe384003b4.tar.gz)
-- [cri-o.arm64.293de815e32d6cdadc368efde45b49fe384003b4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.293de815e32d6cdadc368efde45b49fe384003b4.tar.gz)
+- [cri-o.amd64.0787b7e25f72967e541bc0aa6eb01a805aee8858.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0787b7e25f72967e541bc0aa6eb01a805aee8858.tar.gz)
+- [cri-o.arm64.0787b7e25f72967e541bc0aa6eb01a805aee8858.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0787b7e25f72967e541bc0aa6eb01a805aee8858.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -43,6 +40,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -80,6 +80,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5284](https://github.com/cri-o/cri-o/pull/5284), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
  - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
