--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...2438052](https://github.com/cri-o/cri-o/compare/v1.22.0...2438052088579c69458f7ad612a8d81b9b3bb27e) on Thu, 03 Feb 2022 18:42:07 UTC.
+[v1.22.0...b527000](https://github.com/cri-o/cri-o/compare/v1.22.0...b527000d9ec851d4e83ffc5b119efd29d4c952c3) on Fri, 04 Feb 2022 04:10:26 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2438052088579c69458f7ad612a8d81b9b3bb27e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2438052088579c69458f7ad612a8d81b9b3bb27e.tar.gz)
-- [cri-o.arm64.2438052088579c69458f7ad612a8d81b9b3bb27e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2438052088579c69458f7ad612a8d81b9b3bb27e.tar.gz)
+- [cri-o.amd64.b527000d9ec851d4e83ffc5b119efd29d4c952c3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b527000d9ec851d4e83ffc5b119efd29d4c952c3.tar.gz)
+- [cri-o.arm64.b527000d9ec851d4e83ffc5b119efd29d4c952c3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b527000d9ec851d4e83ffc5b119efd29d4c952c3.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -43,6 +40,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -92,6 +92,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5592](https://github.com/cri-o/cri-o/pull/5592), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
  - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5580](https://github.com/cri-o/cri-o/pull/5580), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5550](https://github.com/cri-o/cri-o/pull/5550), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
