--- a/v1.20.6.md
+++ b/v1.20.6.md
@@ -12,20 +12,21 @@
 # CRI-O v1.20.6
 
 The release notes have been generated for the commit range
-[v1.20.5...c2b5bcc](https://github.com/cri-o/cri-o/compare/v1.20.5...c2b5bccdac94c46f737408d657b87afad642ca99) on Mon, 10 Jan 2022 21:36:03 UTC.
+[v1.20.5...d7f3909](https://github.com/cri-o/cri-o/compare/v1.20.5...d7f3909f13f8dd3368334644b3c79f45a095098d) on Fri, 04 Feb 2022 08:50:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz)
-- [cri-o.arm64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz)
+- [cri-o.amd64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz)
+- [cri-o.arm64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d7f3909f13f8dd3368334644b3c79f45a095098d.tar.gz)
 
 ## Changelog since v1.20.5
 
 ### Changes by Kind
 
 #### Feature
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5597](https://github.com/cri-o/cri-o/pull/5597), [@haircommander](https://github.com/haircommander))
  - Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5413](https://github.com/cri-o/cri-o/pull/5413), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
