--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...e8b5cec](https://github.com/cri-o/cri-o/compare/v1.22.0...e8b5cecc2c7ff91f091d5d21c312d4403c74cafb) on Mon, 07 Feb 2022 09:57:24 UTC.
+[v1.22.0...93cdb46](https://github.com/cri-o/cri-o/compare/v1.22.0...93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a) on Mon, 07 Feb 2022 13:22:54 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e8b5cecc2c7ff91f091d5d21c312d4403c74cafb.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e8b5cecc2c7ff91f091d5d21c312d4403c74cafb.tar.gz)
-- [cri-o.arm64.e8b5cecc2c7ff91f091d5d21c312d4403c74cafb.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e8b5cecc2c7ff91f091d5d21c312d4403c74cafb.tar.gz)
+- [cri-o.amd64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz)
+- [cri-o.arm64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -85,6 +85,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
+ - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed possible runtime panic on pod sandbox stats retrieval. ([#5588](https://github.com/cri-o/cri-o/pull/5588), [@saschagrunert](https://github.com/saschagrunert))
