Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...93cdb46](https://github.com/cri-o/cri-o/compare/v1.22.0...93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a) on Mon, 07 Feb 2022 13:27:03 UTC.
+[v1.22.0...5f3d4dd](https://github.com/cri-o/cri-o/compare/v1.22.0...5f3d4dd7001835f9e1663facc7dd780af365553a) on Tue, 08 Feb 2022 10:19:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz)
-- [cri-o.arm64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.93cdb4600d8a1332fcad08ea89ad6cf3b8f3ec2a.tar.gz)
+- [cri-o.amd64.5f3d4dd7001835f9e1663facc7dd780af365553a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5f3d4dd7001835f9e1663facc7dd780af365553a.tar.gz)
+- [cri-o.arm64.5f3d4dd7001835f9e1663facc7dd780af365553a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5f3d4dd7001835f9e1663facc7dd780af365553a.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -75,6 +75,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Allow for both runtime class and workload level allowed annotations. Now, if a container or pod has both specified, the list will be merged. ([#5465](https://github.com/cri-o/cri-o/pull/5465), [@haircommander](https://github.com/haircommander))
  - Chown the stdin pipe to the user running in the container, so accessing /dev/stdin from an exec session works with crun ([#5391](https://github.com/cri-o/cri-o/pull/5391), [@giuseppe](https://github.com/giuseppe))
+ - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5306](https://github.com/cri-o/cri-o/pull/5306), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5284](https://github.com/cri-o/cri-o/pull/5284), [@haircommander](https://github.com/haircommander))
