Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...d0df46c](https://github.com/cri-o/cri-o/compare/v1.22.0...d0df46cfca75c8bc2934ee24c33fbdc933962556) on Tue, 08 Feb 2022 10:27:59 UTC.
+[v1.22.0...a6db9e1](https://github.com/cri-o/cri-o/compare/v1.22.0...a6db9e1ed52df46e6b72f4fc1e26e0c3404b1156) on Tue, 08 Feb 2022 18:27:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d0df46cfca75c8bc2934ee24c33fbdc933962556.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d0df46cfca75c8bc2934ee24c33fbdc933962556.tar.gz)
-- [cri-o.arm64.d0df46cfca75c8bc2934ee24c33fbdc933962556.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d0df46cfca75c8bc2934ee24c33fbdc933962556.tar.gz)
+- [cri-o.amd64.a6db9e1ed52df46e6b72f4fc1e26e0c3404b1156.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a6db9e1ed52df46e6b72f4fc1e26e0c3404b1156.tar.gz)
+- [cri-o.arm64.a6db9e1ed52df46e6b72f4fc1e26e0c3404b1156.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a6db9e1ed52df46e6b72f4fc1e26e0c3404b1156.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -84,6 +84,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
  - Fix a potential crash caused by a log message NULL-pointer dereference. ([#5579](https://github.com/cri-o/cri-o/pull/5579), [@klihub](https://github.com/klihub))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix an issue where protobuf panics when serializing ListContainer and ListPodSandbox calls ([#5606](https://github.com/cri-o/cri-o/pull/5606), [@haircommander](https://github.com/haircommander))
  - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fix crypto-profile bind within RHEL based containers. ([#5555](https://github.com/cri-o/cri-o/pull/5555), [@rphillips](https://github.com/rphillips))
  - Fix zsh completion generation. ([#5586](https://github.com/cri-o/cri-o/pull/5586), [@klihub](https://github.com/klihub))
