--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...9c1d08e](https://github.com/cri-o/cri-o/compare/v1.22.0...9c1d08e56b39a469668cf4141d19de9f29f77bdb) on Wed, 09 Feb 2022 12:06:36 UTC.
+[v1.22.0...9ad033b](https://github.com/cri-o/cri-o/compare/v1.22.0...9ad033bc06aa8a9c53c0bf9409c58965e6049b93) on Wed, 09 Feb 2022 17:43:38 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9c1d08e56b39a469668cf4141d19de9f29f77bdb.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9c1d08e56b39a469668cf4141d19de9f29f77bdb.tar.gz)
-- [cri-o.arm64.9c1d08e56b39a469668cf4141d19de9f29f77bdb.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9c1d08e56b39a469668cf4141d19de9f29f77bdb.tar.gz)
+- [cri-o.amd64.9ad033bc06aa8a9c53c0bf9409c58965e6049b93.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9ad033bc06aa8a9c53c0bf9409c58965e6049b93.tar.gz)
+- [cri-o.arm64.9ad033bc06aa8a9c53c0bf9409c58965e6049b93.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9ad033bc06aa8a9c53c0bf9409c58965e6049b93.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -80,6 +80,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5306](https://github.com/cri-o/cri-o/pull/5306), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5284](https://github.com/cri-o/cri-o/pull/5284), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
